--- a/Урок 07-09. Введение в Python/Python - PT08.html
+++ b/Урок 07-09. Введение в Python/Python - PT08.html
@@ -163,7 +163,7 @@
         <h2>Практическое Задание 8.4</h2>
         <p><span class="hl-text">Teston Lebra</span> решил покрасить стены, но не знает, сколько банок краски нужно взять. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь покраски в квадратных метрах</span>, <span class="hl-text">сколько грамм требуется для покраски одного квадратного метра</span> и <span class="hl-text">сколько грамм в банке</span>, затем <span class="hl-text">выводит в консоль количество банок краски</span>.</p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно граммы в банке с краской поделить на <span class="number"><b>2</b></span> и добавить к итоговому количеству граммов, затем нацело поделить на граммы в банке.</p>
+        <p>Чтобы получилось целое число, нужно граммы в банке с краской поделить на <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству граммов, затем нацело поделить на граммы в банке.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите площадь покраски (квадратные метры): <span class="input">98</span>
@@ -197,7 +197,8 @@
       <div class="right-rect">
         <h2>Практическое Задание 8.7</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли трёхзначное число</span> и <span class="hl-text">выводит в консоль каждую цифру поотдельности</span>.
-          <span class="hl-text"><b>(2 способа)</b></span></p>
+          <span class="hl-text"><b>(2 способа)</b></span>
+        </p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите трёхзначное число: <span class="input">567</span>
