--- a/Урок 10-14. Операторы ветвлений/Python - HW10.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW10.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -179,7 +175,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>2</b></span> числа</span> и <span class="hl-text">выводит в консоль меню</span> - найти максимальное или минимальное число. Затем программа <span class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span class="hl-text">выводит в консоль результат</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>2</b></span></code> числа</span> и <span class="hl-text">выводит в консоль меню</span> - найти максимальное или минимальное число. Затем программа <span class="hl-text">запрашивает с консоли выбор</span>. В зависимости от выбора программа <span class="hl-text">выводит в консоль результат</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">10</span>
@@ -193,7 +189,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>5</b></span> чисел</span> и <span class="hl-text">выводит в консоль максимальное число</span>. Не используйте вложенные условные конструкции.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>5</b></span></code> чисел</span> и <span class="hl-text">выводит в консоль максимальное число</span>. Не используйте вложенные условные конструкции.</p>
 
         <h3>Подсказка:</h3>
         <p>Сперва определите алгоритм нахождения максимального числа из одного числа, затем из двух, затем из трёх и т.д. Алгоритм не должен зависеть от количества чисел.</p>
@@ -220,7 +216,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.4</h2>
-        <p><span class="hl-text">Teston Lebra</span> снимает в аренду квартиру. Арендодатель сообщил, что если Teston сразу оплатит вперёд за несколько месяцев, то получит скидку. За <span class="number"><b>6</b></span>+ месяцев скидка <span class="number"><b>5%</b></span>, за <span class="number"><b>12</b></span>+ месяцев - <span class="number"><b>10%</b></span>, за <span class="number"><b>24</b></span>+ месяца - <span class="number"><b>15%</b></span>. Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость аренды в месяц</span> и <span class="hl-text">количество месяцев проживания</span>, затем <span class="hl-text">выводит в консоль стоимость оплаты аренды с учётом скидки</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> снимает в аренду квартиру. Арендодатель сообщил, что если Teston сразу оплатит вперёд за несколько месяцев, то получит скидку. За <code><span class="number"><b>6</b></span></code>+ месяцев скидка <code><span class="number"><b>5%</b></span></code>, за <code><span class="number"><b>12</b></span></code>+ месяцев - <code><span class="number"><b>10%</b></span></code>, за <code><span class="number"><b>24</b></span></code>+ месяца - <code><span class="number"><b>15%</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость аренды в месяц</span> и <span class="hl-text">количество месяцев проживания</span>, затем <span class="hl-text">выводит в консоль стоимость оплаты аренды с учётом скидки</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите стоимость аренды в месяц: <span class="input">300</span>
@@ -252,7 +248,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.6</h2>
-        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при оплате корзины запрашиваются несколько данных - скидочный купон, праздник ли сегодня, клиент закупался <span class="number"><b>30</b></span> дней подряд в данном магазине. За каждые верные данные клиенту добавляется <span class="number"><b>5%</b></span> скидка. Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины</span>, <span class="hl-text">скидочный купон</span>, <span class="hl-text">ответ на вопрос</span> <span class="string"><b>"Сегодня праздник?"</b></span>, <span class="hl-text">ответ на вопрос</span> <span class="string"><b>"Клиент закупался 30 дней подряд в данном магазине"</b></span>, затем <span class="hl-text">выводит в консоль итоговую скидку</span> и <span class="hl-text">итоговую стоимость с учётом скидки</span>. Рабочий скидочный купон - <span class="number"><b>5869</b></span>.</p>
+        <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> при оплате корзины запрашиваются несколько данных - скидочный купон, праздник ли сегодня, клиент закупался <code><span class="number"><b>30</b></span></code> дней подряд в данном магазине. За каждые верные данные клиенту добавляется <code><span class="number"><b>5%</b></span></code> скидка. Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины</span>, <span class="hl-text">скидочный купон</span>, <span class="hl-text">ответ на вопрос</span> <code><span class="string"><b>"Сегодня праздник?"</b></span></code>, <span class="hl-text">ответ на вопрос</span> <code><span class="string"><b>"Клиент закупался 30 дней подряд в данном магазине"</b></span></code>, затем <span class="hl-text">выводит в консоль итоговую скидку</span> и <span class="hl-text">итоговую стоимость с учётом скидки</span>. Рабочий скидочный купон - <code><span class="number"><b>5869</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите стоимость корзины: <span class="input">650</span>
@@ -287,7 +283,7 @@ AZN -> RUB
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.8</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая запрашивает с консоли трёхзначный код HTTP и выводит в консоль статус словами по первой цифре. Если вводится число не в диапазоне [<span class="number"><b>100</b></span>, <span class="number"><b>599</b></span>], то выводится ошибка ввода. Он написал программу, но она не работает. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая запрашивает с консоли трёхзначный код HTTP и выводит в консоль статус словами по первой цифре. Если вводится число не в диапазоне [<code><span class="number"><b>100</b></span></code>, <code><span class="number"><b>599</b></span></code>], то выводится ошибка ввода. Он написал программу, но она не работает. <span class="hl-text">Исправьте программу так, чтобы она работала верно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
@@ -352,7 +348,7 @@ if choice == "2":
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 10.10</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили написать прототип программы, которая запрашивает с консоли <span class="number"><b>16</b></span>-значный номер карты, месяц, год и CVV/CVC, затем программа сверяет данные с тестовыми и выводит в консоль <span class="string"><b>"Операция проведена успешно."</b></span> или <span class="string"><b>"Ошибка ввода."</b></span>. Он написал программу, но она работает неверно. <span class="hl-text">Исправьте программу так, чтобы она работала верно только с тестовыми данными</span>. Остальные данные должны приводить к ошибке ввода, и <span class="hl-text">рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> попросили написать прототип программы, которая запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты, месяц, год и CVV/CVC, затем программа сверяет данные с тестовыми и выводит в консоль <code><span class="string"><b>"Операция проведена успешно."</b></span></code> или <code><span class="string"><b>"Ошибка ввода."</b></span></code>. Он написал программу, но она работает неверно. <span class="hl-text">Исправьте программу так, чтобы она работала верно только с тестовыми данными</span>. Остальные данные должны приводить к ошибке ввода, и <span class="hl-text">рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
