--- a/Урок 10-14. Операторы ветвлений/Python - HW12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - HW12.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -179,14 +175,14 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 12.1</h2>
-        <p>В компании, где работает <span class="hl-text">Teston Lebra</span>, все сотрудники имеют балл производительности от <span class="number"><b>1</b></span> до <span class="number"><b>99</b></span> включительно. Напишите программу, которая <span class="hl-text">запрашивает с консоли балл</span> и <span class="hl-text">выводит в консоль категорию</span>.</p>
+        <p>В компании, где работает <span class="hl-text">Teston Lebra</span>, все сотрудники имеют балл производительности от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>99</b></span></code> включительно. Напишите программу, которая <span class="hl-text">запрашивает с консоли балл</span> и <span class="hl-text">выводит в консоль категорию</span>.</p>
         <p>Категории следующие:
-          <br>— <span class="hl-text"><b>"A":</b></span> более <span class="number"><b>90</b></span> баллов.
-          <br>— <span class="hl-text"><b>"B":</b></span> От <span class="number"><b>80</b></span> до <span class="number"><b>90</b></span> баллов включительно.
-          <br>— <span class="hl-text"><b>"C":</b></span> От <span class="number"><b>70</b></span> до <span class="number"><b>79</b></span> баллов включительно.
-          <br>— <span class="hl-text"><b>"D":</b></span> От <span class="number"><b>60</b></span> до <span class="number"><b>69</b></span> баллов включительно.
-          <br>— <span class="hl-text"><b>"E":</b></span> От <span class="number"><b>50</b></span> до <span class="number"><b>59</b></span> баллов.
-          <br>— <span class="hl-text"><b>"F":</b></span> Менее <span class="number"><b>50</b></span> баллов.
+          <br>— <span class="hl-text"><b>"A":</b></span> более <code><span class="number"><b>90</b></span></code> баллов.
+          <br>— <span class="hl-text"><b>"B":</b></span> От <code><span class="number"><b>80</b></span></code> до <code><span class="number"><b>90</b></span></code> баллов включительно.
+          <br>— <span class="hl-text"><b>"C":</b></span> От <code><span class="number"><b>70</b></span></code> до <code><span class="number"><b>79</b></span></code> баллов включительно.
+          <br>— <span class="hl-text"><b>"D":</b></span> От <code><span class="number"><b>60</b></span></code> до <code><span class="number"><b>69</b></span></code> баллов включительно.
+          <br>— <span class="hl-text"><b>"E":</b></span> От <code><span class="number"><b>50</b></span></code> до <code><span class="number"><b>59</b></span></code> баллов.
+          <br>— <span class="hl-text"><b>"F":</b></span> Менее <code><span class="number"><b>50</b></span></code> баллов.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -197,7 +193,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 12.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> попросили переписать свой прототип программы входа по логину и паролю. Программа должна выводить в консоль <span class="string"><b>"Вход выполнен успешно."</b></span>, если логин - <span class="string"><b>"admin"</b></span>, а пароль - <span class="string"><b>"5869"</b></span> или же логин - <span class="string"><b>"root"</b></span>, а пароль - <span class="string"><b>"1002"</b></span>. В противном случае программа должна выводить в консоль <span class="string"><b>"Неверный логин или пароль."</b></span>. Напишите программу, которая <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span class="hl-text">выводит в консоль ответ</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> попросили переписать свой прототип программы входа по логину и паролю. Программа должна выводить в консоль <code><span class="string"><b>"Вход выполнен успешно."</b></span></code>, если логин - <code><span class="string"><b>"admin"</b></span></code>, а пароль - <code><span class="string"><b>"5869"</b></span></code> или же логин - <code><span class="string"><b>"root"</b></span></code>, а пароль - <code><span class="string"><b>"1002"</b></span></code>. В противном случае программа должна выводить в консоль <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span class="hl-text">выводит в консоль ответ</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите логин: <span class="input">root</span>
@@ -210,11 +206,11 @@
         <h2>Домашнее Задание 12.3</h2>
         <p>Магазин <span class="hl-text">"Всё Не Дорого"</span> ввёл новую политику к своим клиентам. Клиенты, которые выполнили определённые условия, получают бонус.</p>
         <p>Условия для получения бонуса следующие:
-          <br>— Клиент должен быть <span class="hl-text">участником бонусной программы</span> или <span class="hl-text">совершить покупку на сумму более</span> <span class="number"><b>300</b></span>.
-          <br>— Покупка должна быть совершена в <span class="hl-text">рабочий день</span>, за исключением случаев, когда <span class="hl-text">сумма покупки превышает ещё более высокий порог в сумму</span> <span class="number"><b>1000</b></span>, что позволяет получить бонус также и в выходные.
+          <br>— Клиент должен быть <span class="hl-text">участником бонусной программы</span> или <span class="hl-text">совершить покупку на сумму более</span> <code><span class="number"><b>300</b></span></code>.
+          <br>— Покупка должна быть совершена в <span class="hl-text">рабочий день</span>, за исключением случаев, когда <span class="hl-text">сумма покупки превышает ещё более высокий порог в сумму</span> <code><span class="number"><b>1000</b></span></code>, что позволяет получить бонус также и в выходные.
           <br>— Клиент не должен иметь <span class="hl-text">неоплаченных задолженностей</span>.
         </p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли подтверждение участника</span>, <span class="hl-text">сумму покупки</span>, <span class="hl-text">подтверждение рабочего дня</span>, <span class="hl-text">наличие задолжности</span>, а затем <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Клиент может получить бонус."</b></span> или <span class="string"><b>"Клиент не выполнил условия для получения бонуса."</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли подтверждение участника</span>, <span class="hl-text">сумму покупки</span>, <span class="hl-text">подтверждение рабочего дня</span>, <span class="hl-text">наличие задолжности</span>, а затем <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Клиент может получить бонус."</b></span></code> или <code><span class="string"><b>"Клиент не выполнил условия для получения бонуса."</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Клиент является участником бонусной программы (Y/N): <span class="input">N</span>
@@ -233,7 +229,7 @@
           <br>— Уровень конфиденциальности файла <span class="hl-text">должен быть ниже</span> или <span class="hl-text">равен</span> уровню доступа пользователя.
           <br>— Файл <span class="hl-text">не должен быть заблокирован</span>.
         </p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли подтверждение прав администратора</span>, <span class="hl-text">подтверждение создателя файла</span>, <span class="hl-text">уровень конфиденциальности</span>, <span class="hl-text">уровень доступа</span>, <span class="hl-text">подтверждение блокирования файла</span>, затем <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Доступ разрешён."</b></span> или <span class="string"><b>"Доступ запрещён."</b></span> в зависимости от условий.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли подтверждение прав администратора</span>, <span class="hl-text">подтверждение создателя файла</span>, <span class="hl-text">уровень конфиденциальности</span>, <span class="hl-text">уровень доступа</span>, <span class="hl-text">подтверждение блокирования файла</span>, затем <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Доступ разрешён."</b></span></code> или <code><span class="string"><b>"Доступ запрещён."</b></span></code> в зависимости от условий.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Права администратора присутствуют (Y/N): <span class="input">Y</span>
@@ -249,9 +245,9 @@
         <h2>Домашнее Задание 12.5</h2>
         <p><span class="hl-text">Teston Lebra</span> написал программу для того, чтобы определять, подходит ли человек для проведения собеседования или нет.</p>
         <p>Человека можно звать на собеседование, если выполняются следующие критерии:
-          <br>— Человеку больше <span class="number"><b>21</b></span> года
-          <br>— Опыт работы <span class="number"><b>24</b></span> <span class="hl-text">и более месяцев</span>
-          <br>— При наличии сертификата опыт работы может быть от <span class="number"><b>12</b> <span class="hl-text">и более месяцев</span>
+          <br>— Человеку больше <code><span class="number"><b>21</b></span></code> года
+          <br>— Опыт работы <code><span class="number"><b>24</b></span></code> <span class="hl-text">и более месяцев</span>
+          <br>— При наличии сертификата опыт работы может быть от <code><span class="number"><b>12</b></span></code> <span class="hl-text">и более месяцев</span>
         </p>
         <p>Программа корректно не работает. <span class="hl-text">Исправьте программу так, чтобы она работала корректно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
@@ -284,10 +280,10 @@ else:
         <h2>Домашнее Задание 12.6</h2>
         <p><span class="hl-text">Teston Lebra</span> попросили написать программу, которая запрашивает с консоли процент вероятности дождя и выводит в консоль словесную интепретацию.</p>
         <p>Интерпретация следующая:
-          <br>— <span class="hl-text"><b>Низкая вероятность:</b></span> до <span class="number"><b>30%</b></span> включительно.
-          <br>— <span class="hl-text"><b>Умеренная вероятность:</b></span> от <span class="number"><b>31%</b></span> до <span class="number"><b>60%</b></span> включительно.
-          <br>— <span class="hl-text"><b>Высокая вероятность:</b></span> от <span class="number"><b>61%</b></span> до <span class="number"><b>80%</b></span> включительно.
-          <br>— <span class="hl-text"><b>Очень высокая вероятность:</b></span> от <span class="number"><b>81%</b></span> и выше.
+          <br>— <span class="hl-text"><b>Низкая вероятность:</b></span> до <code><span class="number"><b>30%</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Умеренная вероятность:</b></span> от <code><span class="number"><b>31%</b></span></code> до <code><span class="number"><b>60%</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Высокая вероятность:</b></span> от <code><span class="number"><b>61%</b></span></code> до <code><span class="number"><b>80%</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Очень высокая вероятность:</b></span> от <code><span class="number"><b>81%</b></span></code> и выше.
         </p>
         <p>Программа в целом работает, но иногда некорректно. <span class="hl-text">Исправьте программу так, чтобы она работала корректно, и рядом напишите комментарии о том, почему изменённый вариант должен работать верно</span>.</p>
         <h3>Код:</h3>
@@ -316,11 +312,11 @@ else:
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 12.7</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли средний балл студента, имеются ли долги и рекомендации у студента, возраст студента, затем выводит в консоль <span class="string"><b>"Студент может получить стипендию."</b></span> или <span class="string"><b>"Студент не может получить стипендию."</b></span> в зависимости от критериев. Критерии подсказал ему преподаватель кафедры дискретной математики.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал программу, которая запрашивает с консоли средний балл студента, имеются ли долги и рекомендации у студента, возраст студента, затем выводит в консоль <code><span class="string"><b>"Студент может получить стипендию."</b></span></code> или <code><span class="string"><b>"Студент не может получить стипендию."</b></span></code> в зависимости от критериев. Критерии подсказал ему преподаватель кафедры дискретной математики.</p>
         <p>Критерии следующие:
-          <br>— Средний балл студента от <span class="number"><b>80</b></span> <span class="hl-text">и выше</span> или средний балл от <span class="number"><b>80</b></span> <span class="hl-text">и выше</span>, но при этом возраст студента <span class="hl-text">больше</span> <span class="number"><b>21</b></span> и <span class="hl-text">нет долгов</span> или же возраст студента от <span class="number"><b>21</b></span> <span class="hl-text">и меньше</span> и <span class="hl-text">нет долгов</span>.
+          <br>— Средний балл студента от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и выше</span> или средний балл от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и выше</span>, но при этом возраст студента <span class="hl-text">больше</span> <code><span class="number"><b>21</b></span></code> и <span class="hl-text">нет долгов</span> или же возраст студента от <code><span class="number"><b>21</b></span></code> <span class="hl-text">и меньше</span> и <span class="hl-text">нет долгов</span>.
           <br>— <span class="hl-text">Нет долгов</span>, при этом <span class="hl-text">есть рекомендация</span> или <span class="hl-text">нет долгов</span>.
-          <br>— Средний балл студента от <span class="number"><b>80</b></span> <span class="hl-text">и выше</span> или же <span class="hl-text">ниже</span> <span class="number"><b>80</b></span>.
+          <br>— Средний балл студента от <code><span class="number"><b>80</b></span></code> <span class="hl-text">и выше</span> или же <span class="hl-text">ниже</span> <code><span class="number"><b>80</b></span></code>.
         </p>
         <p>Программа хоть и работает верно, но другой преподаватель отметил, что условие можно упростить. <span class="hl-text">Упростите условие этой программы</span>.</p>
         <h3>Код:</h3>
