--- a/Урок 15-20. Циклы/Python - HW16.html
+++ b/Урок 15-20. Циклы/Python - HW16.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -120,48 +116,59 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket,
     .string-esc,
     .keyword {
       color: #CF8E6D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .self {
       color: #94558D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket-inner {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
 
     .comments {
       color: #7A7E85;
+      font-family: "JetBrains mono", monospace;
     }
 
     .metadata {
       color: #B3AE60;
+      font-family: "JetBrains mono", monospace;
     }
 
     .built-in {
       color: #8888C6;
+      font-family: "JetBrains mono", monospace;
     }
 
     .function {
       color: #56A8F5;
+      font-family: "JetBrains mono", monospace;
     }
 
     .special-names {
       color: #B200B2;
+      font-family: "JetBrains mono", monospace;
     }
 
     .keyword-argument {
       color: #AA4926;
+      font-family: "JetBrains mono", monospace;
     }
 
     ol {
@@ -188,6 +195,7 @@
 
     .grey {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .no-padding-bottom {
@@ -209,7 +217,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на <span class="number"><b>11</b></span> в указанном диапазоне</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль в порядке убывания все числа, которые нацело делятся на <code><span class="number"><b>11</b></span></code> в указанном диапазоне</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">1</span>
@@ -223,7 +231,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 16.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал программу, которая получает данные от пользователя и преобразует эти данные в хэш-код (число). Если в этих данных содержатся ошибки, то цифра <span class="number"><b>5</b></span> будет встречается в числе больше трёх раз. Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">проверяет количество цифр</span> <span class="number"><b>5</b></span>. Если количество пятёрок больше трёх, то программа должна <span class="hl-text">вывести в консоль</span> <span class="string"><b>"В данных пользователя присутствуют ошибки."</b></span>. В противном случае программа должна <span class="hl-text">вывести в консоль</span> <span class="string"><b>"Данные пользователя в порядке."</b></span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> написал программу, которая получает данные от пользователя и преобразует эти данные в хэш-код (число). Если в этих данных содержатся ошибки, то цифра <code><span class="number"><b>5</b></span></code> будет встречается в числе больше трёх раз. Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">проверяет количество цифр</span> <code><span class="number"><b>5</b></span></code>. Если количество пятёрок больше трёх, то программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"В данных пользователя присутствуют ошибки."</b></span></code>. В противном случае программа должна <span class="hl-text">вывести в консоль</span> <code><span class="string"><b>"Данные пользователя в порядке."</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите хэш-код (число): <span class="input">283073481295386363459721836860</span>
