--- a/Урок 15-20. Циклы/Python - HW18.html
+++ b/Урок 15-20. Циклы/Python - HW18.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -106,52 +102,64 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket,
     .string-esc,
     .keyword {
       color: #CF8E6D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .self {
       color: #94558D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket-inner {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
 
     .comments {
       color: #7A7E85;
+      font-family: "JetBrains mono", monospace;
     }
 
     .metadata {
       color: #B3AE60;
+      font-family: "JetBrains mono", monospace;
     }
 
     .built-in {
       color: #8888C6;
+      font-family: "JetBrains mono", monospace;
     }
 
     .function {
       color: #56A8F5;
+      font-family: "JetBrains mono", monospace;
     }
 
     .special-names {
       color: #B200B2;
+      font-family: "JetBrains mono", monospace;
     }
 
     .keyword-argument {
       color: #AA4926;
+      font-family: "JetBrains mono", monospace;
     }
 
     .grey {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .no-padding-bottom {
@@ -173,7 +181,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 18.1</h2>
-        <p>Напишите программу, которая запрашивает с консоли 3 числа - начало и конец диапазона, а также шаг. Если шаг положительный, то программа должна выводить в консоль числа в порядке возрастания. В противном случае - в порядке убывания.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>3</b></span> числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>, а также <span class="hl-text">шаг</span>. Если шаг положительный, то программа должна <span class="hl-text">выводить в консоль числа в порядке возрастания</span>. В противном случае - <span class="hl-text">в порядке убывания</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">5</span>
