--- a/Урок 15-20. Циклы/Python - PT16.html
+++ b/Урок 15-20. Циклы/Python - PT16.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -175,7 +171,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 16.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль первое число, которое делится на <span class="number"><b>7</b></span> нацело после введённого числа</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль первое число, которое делится на <code><span class="number"><b>7</b></span></code> нацело после введённого числа</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">14</span>
@@ -197,10 +193,10 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.3</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число, состоящее из цифр от <span class="number"><b>0</b></span> до <span class="number"><b>3</b></span> включительно</span>, и <span class="hl-text">выводит в консоль данные в зависимости от условий</span>.
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число, состоящее из цифр от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>3</b></span></code> включительно</span>, и <span class="hl-text">выводит в консоль данные в зависимости от условий</span>.
         <p>Условия следующие:
-          <br>— Цифра <span class="number"><b>0</b></span> считается началом новой команды. Если встречается цифра <span class="number"><b>0</b></span>, то счётчик команд увеличивается на <span class="number"><b>1</b></span>. Выводится в конце.
-          <br>— Все другие цифры увеличиваются в <span class="number"><b>2</b></span> раза и выводятся в консоль.
+          <br>— Цифра <code><span class="number"><b>0</b></span></code> считается началом новой команды. Если встречается цифра <code><span class="number"><b>0</b></span></code>, то счётчик команд увеличивается на <code><span class="number"><b>1</b></span></code>. Выводится в конце.
+          <br>— Все другие цифры увеличиваются в <code><span class="number"><b>2</b></span></code> раза и выводятся в консоль.
           <br>— Проход должен быть с конца числа.
         </p>
         <h3>Консоль:</h3>
@@ -218,7 +214,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.4</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает числа с консоли до тех пор, пока не введут</span> <span class="number"><b>0</b></span>. После этого программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"True"</b></span>, если каждое следующее введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает числа с консоли до тех пор, пока не введут</span> <code><span class="number"><b>0</b></span></code>. После этого программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"True"</b></span></code>, если каждое следующее введённое число больше-равно предыдущего, и <span class="hl-text">ничего</span> в противном случае.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">2</span>
@@ -231,7 +227,7 @@ True</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает число с консоли</span> и <span class="hl-text">находит произведение цифр числа</span>. Если во время перебора цифр программа встречает цифру <span class="number"><b>0</b></span>, то программа должна <span class="hl-text">остановиться</span> и <span class="hl-text">вывести в консоль произведение цифр</span>, а также <span class="string"><b>"Все цифры рассмотрены."</b></span>, если программа прошлась по всем цифрам, и <span class="string"><b>"Перебор цифр был прерван."</b></span> в противном случае.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает число с консоли</span> и <span class="hl-text">находит произведение цифр числа</span>. Если во время перебора цифр программа встречает цифру <code><span class="number"><b>0</b></span></code>, то программа должна <span class="hl-text">остановиться</span> и <span class="hl-text">вывести в консоль произведение цифр</span>, а также <code><span class="string"><b>"Все цифры рассмотрены."</b></span></code>, если программа прошлась по всем цифрам, и <code><span class="string"><b>"Перебор цифр был прерван."</b></span></code> в противном случае.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">12032</span>
@@ -242,10 +238,10 @@ True</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">загадывает число от <span class="number"><b>1</b></span> до <span class="number"><b>100</b></span> включительно</span>, затем <span class="hl-text">запрашивает с консоли число</span>. Если число угаданно, то программа <span class="hl-text">выводит в консоль количество попыток</span>, затем <span class="hl-text">запрашивает с консоли ввод на вопрос</span> <span class="string"><b>"Сыграть ещё раз (Y/N): "</b></span>. Если ввели <span class="string"><b>"Y"</b></span>, то <span class="hl-text">игра начинается заново</span>. В противном случае программа <span class="hl-text">завершается</span>. Если же число не угаданно, то программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Загаданное число больше."</b></span> или <span class="string"><b>"Загаданное число меньше."</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">загадывает число от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>100</b></span></code> включительно</span>, затем <span class="hl-text">запрашивает с консоли число</span>. Если число угаданно, то программа <span class="hl-text">выводит в консоль количество попыток</span>, затем <span class="hl-text">запрашивает с консоли ввод на вопрос</span> <code><span class="string"><b>"Сыграть ещё раз (Y/N): "</b></span></code>. Если ввели <code><span class="string"><b>"Y"</b></span></code>, то <span class="hl-text">игра начинается заново</span>. В противном случае программа <span class="hl-text">завершается</span>. Если же число не угаданно, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Загаданное число больше."</b></span></code> или <code><span class="string"><b>"Загаданное число меньше."</b></span></code>.</p>
 
         <h3>Подсказка:</h3>
-        <p>Используйте следующий код, чтобы генерировать число от <span class="number"><b>1</b></span> до <span class="number"><b>100</b></span> включительно:
+        <p>Используйте следующий код, чтобы генерировать число от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>100</b></span></code> включительно:
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
               <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
@@ -273,7 +269,7 @@ randint(1, 100)  # Использование функции для генера
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">проверяет корректность IP</span>. Программа <span class="hl-text">запрашивает с консоли числа от <span class="number"><b>0</b></span> до <span class="number"><b>255</b></span> включительно</span>. Если из <span class="number"><b>4</b></span>-х запросов хотя бы одно число было вне диапазона, то программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Неверный IP адрес."</b></span>. В противном случае <span class="hl-text">выводит</span> <span class="string"><b>"IP адрес корректный."</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">проверяет корректность IP</span>. Программа <span class="hl-text">запрашивает с консоли числа от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>255</b></span></code> включительно</span>. Если из <code><span class="number"><b>4</b></span></code>-х запросов хотя бы одно число было вне диапазона, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Неверный IP адрес."</b></span></code>. В противном случае <span class="hl-text">выводит</span> <code><span class="string"><b>"IP адрес корректный."</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первую часть IP: <span class="input">243</span>
@@ -284,8 +280,8 @@ randint(1, 100)  # Использование функции для генера
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 16.8</h2>
-        <p>На работе у <span class="hl-text">Teston Lebra</span> используются транзакции для передачи денег. Транзакции имеют список пронумерованных команд от <span class="number"><b>1</b></span> до <span class="number"><b>9</b></span> включительно. Вместе эти числа составляют идентификатор транзакции.</p>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли цифры от <span class="number"><b>1</b></span> до <span class="number"><b>9</b></span> включительно до тех пор, пока не встретит два нуля подряд</span>. Эти цифры программа <span class="hl-text">соединяет в одно число - идентификатор</span>. Если проблем никаких нет, то программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Транзакция &ltидентификатор&gt успешно выполнена."</b></span>. В противном случае программа должна <span class="hl-text">писать</span> <span class="string"><b>"Ошибка транзакции."</b></span>, а затем <span class="string"><b>"Откат команды &ltпоследняя_цифра_идентификатора&gt."</b></span> <span class="hl-text">до тех пор, пока не останутся цифры в транзакции</span>.</p>
+        <p>На работе у <span class="hl-text">Teston Lebra</span> используются транзакции для передачи денег. Транзакции имеют список пронумерованных команд от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>9</b></span></code> включительно. Вместе эти числа составляют идентификатор транзакции.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли цифры от <code><span class="number"><b>1</b></span></code> до <code><span class="number"><b>9</b></span></code> включительно до тех пор, пока не встретит два нуля подряд</span>. Эти цифры программа <span class="hl-text">соединяет в одно число - идентификатор</span>. Если проблем никаких нет, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Транзакция &ltидентификатор&gt успешно выполнена."</b></span></code>. В противном случае программа должна <span class="hl-text">писать</span> <code><span class="string"><b>"Ошибка транзакции."</b></span></code>, а затем <code><span class="string"><b>"Откат команды &ltпоследняя_цифра_идентификатора&gt."</b></span></code> <span class="hl-text">до тех пор, пока не останутся цифры в транзакции</span>.</p>
         <p>Условия прерывания транзакции:
           <br>— После цифры <span class="number"><b>0</b></span> идёт не цифра <span class="number"><b>0</b></span>.
           <br>— Транзакция не начинается с цифры <span class="number"><b>1</b></span>.
