--- a/Урок 15-20. Циклы/Python - PT17.html
+++ b/Урок 15-20. Циклы/Python - PT17.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -194,7 +190,7 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль все числа диапазона в обратном порядке с шагом</span> <span class="number"><b>2</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span> - <span class="hl-text">начало</span> и <span class="hl-text">конец диапазона</span>. Программа должна <span class="hl-text">вывести в консоль все числа диапазона в обратном порядке с шагом</span> <code><span class="number"><b>2</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите начало диапазона: <span class="input">2</span>
@@ -291,7 +287,7 @@ range(9, 5, -3)</code></pre>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 17.7</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли количество студентов</span> и <span class="hl-text">столько же раз запрашивает оценку</span>. В конце программа <span class="hl-text">выводит в консоль сколько студентов допускается до экзамена</span>. Если оценка <span class="number"><b>7</b></span> или больше, то <span class="hl-text">студент считается допущенным</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли количество студентов</span> и <span class="hl-text">столько же раз запрашивает оценку</span>. В конце программа <span class="hl-text">выводит в консоль сколько студентов допускается до экзамена</span>. Если оценка <code><span class="number"><b>7</b></span></code> или больше, то <span class="hl-text">студент считается допущенным</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите количество студентов: <span class="input">5</span>
