--- a/Урок 15-20. Циклы/Python - PT18.html
+++ b/Урок 15-20. Циклы/Python - PT18.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -228,7 +224,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.5</h2>
-        <p>Напишите программу, которая <span class="hl-text">использует цикл <span class="keyword"><b>for</b></span> внутри другого цикла</span> <span class="keyword"><b>for</b></span> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code> внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>0 1 2 3
@@ -239,7 +235,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 18.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">использует цикл <span class="keyword"><b>for</b></span> внутри другого цикла</span> <span class="keyword"><b>for</b></span> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">использует цикл <code class="python"><b>for</b></code> внутри другого цикла</span> <code class="python"><b>for</b></code> и <span class="hl-text">рисует в консоли прямоугольный треугольник из чисел</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>      3
@@ -257,7 +253,7 @@
         </p>
 
         <p>Выбор <span class="hl-text">пункта 1</span>:
-          <br>— <span class="hl-text">Выводит в консоль</span> <span class="string"><b>"На ваш телефон был отправлен код доступа. Введите его: "</b></span> и <span class="hl-text">запрашивает с консоли код</span>.
+          <br>— <span class="hl-text">Выводит в консоль</span> <code><span class="string"><b>"На ваш телефон был отправлен код доступа. Введите его: "</b></span></code> и <span class="hl-text">запрашивает с консоли код</span>.
           <br>— Если верно указан код доступа, то <span class="hl-text">запрашивает с консоли новый логин</span> и <span class="hl-text">пароль</span>, затем <span class="hl-text">возвращает в главное меню</span>.
           <br>— Если неверно указан код доступа, то <span class="hl-text">снова запрашивает с консоли код доступа</span>.
         </p>
@@ -265,7 +261,7 @@
         <p>Выбор <span class="hl-text">пункта 2</span>:
           <br>— <span class="hl-text">Запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>.
           <br>— Если логин и пароль неверные, то <span class="hl-text">возвращает в главное меню</span>.
-          <br>— Если логин и пароль верные, то <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Добро пожаловать &ltлогин&gt"</b></span> и <span class="hl-text">выводит в консоль меню управления</span>.
+          <br>— Если логин и пароль верные, то <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Добро пожаловать &ltлогин&gt"</b></span></code> и <span class="hl-text">выводит в консоль меню управления</span>.
         </p>
 
         <p><span class="hl-text"><b>Меню управления</b></span>:
