--- a/Урок 15-20. Циклы/Python - PT19-20.html
+++ b/Урок 15-20. Циклы/Python - PT19-20.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -159,7 +155,7 @@
 5. Завершить программу
 Выберите действие: <span class="input">...</span></code></pre>
         </div>
-        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает <span class="number"><b>16</b></span>-значный номер карты</span>, <span class="hl-text">месяц</span> и <span class="hl-text">год окончания</span>, <span class="hl-text">CVV/CVC код</span>. Если они совпадают с определёнными данными, то программа <span class="hl-text">запрашивает сумму</span>. В противном случае программа <span class="hl-text">возвращает в меню</span> <span class="string"><b>"Мой кабинет"</b></span>.</p>
+        <p>При выборе <span class="hl-text">пункта 3</span> программа <span class="hl-text">запрашивает <code><span class="number"><b>16</b></span></code>-значный номер карты</span>, <span class="hl-text">месяц</span> и <span class="hl-text">год окончания</span>, <span class="hl-text">CVV/CVC код</span>. Если они совпадают с определёнными данными, то программа <span class="hl-text">запрашивает сумму</span>. В противном случае программа <span class="hl-text">возвращает в меню</span> <code><span class="string"><b>"Мой кабинет"</b></span></code>.</p>
 
         <p>При выборе <span class="hl-text">пункта 4</span> программа <span class="hl-text">возвращается в меню клиента</span>.</p>
 
