--- a/Урок 28-34. Функции. Модули/Python - PT29.html
+++ b/Урок 28-34. Функции. Модули/Python - PT29.html
@@ -120,48 +120,59 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket,
     .string-esc,
     .keyword {
       color: #CF8E6D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .self {
       color: #94558D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .string-bracket-inner {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
 
     .comments {
       color: #7A7E85;
+      font-family: "JetBrains mono", monospace;
     }
 
     .metadata {
       color: #B3AE60;
+      font-family: "JetBrains mono", monospace;
     }
 
     .built-in {
       color: #8888C6;
+      font-family: "JetBrains mono", monospace;
     }
 
     .function {
       color: #56A8F5;
+      font-family: "JetBrains mono", monospace;
     }
 
     .special-names {
       color: #B200B2;
+      font-family: "JetBrains mono", monospace;
     }
 
     .keyword-argument {
       color: #AA4926;
+      font-family: "JetBrains mono", monospace;
     }
   </style>
 </head>
