--- a/Урок 28-34. Функции. Модули/Python - PT31.html
+++ b/Урок 28-34. Функции. Модули/Python - PT31.html
@@ -77,14 +77,17 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
 
     .function {
       color: #56A8F5;
+      font-family: "JetBrains mono", monospace;
     }
 
     ol {
@@ -111,6 +114,7 @@
 
     .grey {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
 
     .no-padding-bottom {
