--- a/Урок 07-09. Введение в Python/Python - PT09.html
+++ b/Урок 07-09. Введение в Python/Python - PT09.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -101,6 +97,7 @@
 
     code {
       font-family: "JetBrains mono", monospace;
+      color: #BCBEC4;
     }
 
     .number {
@@ -140,7 +137,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.2</h2>
-        <p><span class="hl-text">Teston Lebra</span> и его четверо друзей решили собрать деньги для совместного отпуска. Напишите программу, которая <span class="number"><b>5</b></span> <span class="hl-text">раз запрашивает ввод денег как числа с консоли</span> и <span class="hl-text">выводит в консоль итоговую сумму денег</span>. Используйте сокращённую запись для суммирования.</p>
+        <p><span class="hl-text">Teston Lebra</span> и его четверо друзей решили собрать деньги для совместного отпуска. Напишите программу, которая <code><span class="number"><b>5</b></span></code> <span class="hl-text">раз запрашивает ввод денег как числа с консоли</span> и <span class="hl-text">выводит в консоль итоговую сумму денег</span>. Используйте сокращённую запись для суммирования.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первую сумму: <span class="input">150</span>
@@ -154,7 +151,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.3</h2>
-        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, используя <span class="hl-text">только <span class="number"><b>2</b></span> переменные</span>.</p>
+        <p>Выполните <span class="hl-text">Практическое Задание 9.2</span>, используя <span class="hl-text">только <code><span class="number"><b>2</b></span></code> переменные</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.4</h2>
@@ -172,7 +169,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 9.6</h2>
-        <p><span class="hl-text">Teston Lebra</span> нужно оформить четырёхзначное число в виде X---X---X---X, где X - это число. Напишите программу, которая <span class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль в требуемом виде</span>. Используйте разделитель при выводе.</p>
+        <p><span class="hl-text">Teston Lebra</span> нужно оформить четырёхзначное число в виде <code><b>X---X---X---X</b></code>, где <code><b>X</b></code> - это число. Напишите программу, которая <span class="hl-text">запрашивает с консоли четырёхзначное число</span> и <span class="hl-text">выводит в консоль в требуемом виде</span>. Используйте разделитель при выводе.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите четырёхзначное число: <span class="input">5869</span>
@@ -184,7 +181,7 @@
         <h2>Практическое Задание 9.7</h2>
         <p><span class="hl-text">Teston Lebra</span> решил поклеить обои, но не знает, сколько нужно взять рулонов и во сколько денег это обойдётся. Напишите программу, которая <span class="hl-text">запрашивает с консоли площадь поклейки в метрах</span>, <span class="hl-text">сколько метров в рулоне</span>, <span class="hl-text">цену за рулон</span>, затем <span class="hl-text">выводит в консоль количество рулонов</span> и <span class="hl-text">итоговую цену</span>.</p>
         <h3>Подсказка</h3>
-        <p>Чтобы получилось целое число, нужно метры в рулоне поделить на <span class="number"><b>2</b></span> и добавить к итоговому количеству площади поклейки, затем нацело поделить на метры в рулоне.</p>
+        <p>Чтобы получилось целое число, нужно метры в рулоне поделить на <code><span class="number"><b>2</b></span></code> и добавить к итоговому количеству площади поклейки, затем нацело поделить на метры в рулоне.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите площадь поклейки (метры): <span class="input">98</span>
@@ -221,7 +218,7 @@
         <h2>Практическое Задание 9.10</h2>
         <p><span class="hl-text">Teston Lebra</span> хочет сделать вклад в банк под годовой процент, но не хочет долго высчитывать, сколько денег у него будет через несколько лет. Напишите программу, которая <span class="hl-text">запрашивает с консоли начальную сумму вклада</span>, <span class="hl-text">годовую процентную ставку</span> и <span class="hl-text">количество лет</span>, затем <span class="hl-text">выводит в консоль сумму вклада через указанное количество лет</span>.</p>
         <p>Программа должна считать по формуле:
-          <br><code><span class="grey"><b><span class="number">&ltсумма_вклада&gt</span> = <span class="number">&ltначальная_сумма_вклада&gt</span> * ((<span class="number">1</span> + <span class="number">&ltгодовая_процентная_ставка&gt</span> / <span class="number">100</span>) ** <span class="number">&ltколичество_лет&gt</span>)</b></span></code>
+          <br><code><b><span class="number">&ltсумма_вклада&gt</span> = <span class="number">&ltначальная_сумма_вклада&gt</span> * ((<span class="number">1</span> + <span class="number">&ltгодовая_процентная_ставка&gt</span> / <span class="number">100</span>) ** <span class="number">&ltколичество_лет&gt</span>)</b></code>
         </p>
         <h3>Консоль:</h3>
         <div class="console">
