--- a/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -101,6 +97,7 @@
 
     code {
       font-family: "JetBrains mono", monospace;
+      color: #BCBEC4;
     }
 
     .copy-button {
@@ -284,10 +281,10 @@
         <h2>Практическое Задание 11.10</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли возраст</span> и <span class="hl-text">выводит в консоль возрастную группу</span>.</p>
         <p>Группы следующие:
-          <br>— <span class="hl-text"><b>Детство</b></span>: до <span class="number"><b>13</b></span> включительно.
-          <br>— <span class="hl-text"><b>Молодость</b></span>: от <span class="number"><b>14</b></span> до <span class="number"><b>24</b></span> включительно.
-          <br>— <span class="hl-text"><b>Зрелость</b></span>: от <span class="number"><b>25</b></span> до <span class="number"><b>59</b></span> включительно.
-          <br>— <span class="hl-text"><b>Старость</b></span>: от <span class="number"><b>60</b></span> и выше.
+          <br>— <span class="hl-text"><b>Детство</b></span>: до <code><span class="number"><b>13</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Молодость</b></span>: от <code><span class="number"><b>14</b></span></code> до <code><span class="number"><b>24</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Зрелость</b></span>: от <code><span class="number"><b>25</b></span></code> до <code><span class="number"><b>59</b></span></code> включительно.
+          <br>— <span class="hl-text"><b>Старость</b></span>: от <code><span class="number"><b>60</b></span></code> и выше.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -298,7 +295,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 11.11</h2>
-        <p><span class="hl-text">Teston Lebra</span> поручили сделать прототип входа в программу по логину и паролю. Программа должна выводить в консоль <span class="string"><b>"Вход выполнен успешно."</b></span>, если логин - <span class="string"><b>"admin"</b></span>, а пароль - <span class="string"><b>"5869"</b></span>, а в противном случае <span class="string"><b>"Неверный логин или пароль."</b></span>. Напишите программу, которая <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span class="hl-text">выводит в консоль ответ</span>.</p>
+        <p><span class="hl-text">Teston Lebra</span> поручили сделать прототип входа в программу по логину и паролю. Программа должна выводить в консоль <code><span class="string"><b>"Вход выполнен успешно."</b></span></code>, если логин - <code><span class="string"><b>"admin"</b></span></code>, а пароль - <code><span class="string"><b>"5869"</b></span></code>, а в противном случае <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span class="hl-text">выводит в консоль ответ</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите логин: <span class="input">admin</span>
@@ -311,12 +308,12 @@
         <h2>Практическое Задание 11.12</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли вес в килограммах</span> и <span class="hl-text">рост в метрах</span>, затем <span class="hl-text">выводит в консоль индекс массы тела (ИМТ)</span> и <span class="hl-text">категорию здоровья</span>. ИМТ вычисляется как отношение массы тела в килограммах к квадрату роста в метрах.</p>
         <p>Категории уровня здоровья:
-          <br>— <span class="hl-text"><b>Недостаточный вес:</b></span> ИМТ менее <span class="number"><b>18.5</b></span>.
-          <br>— <span class="hl-text"><b>Нормальный вес:</b></span> ИМТ от <span class="number"><b>18.5</b></span> до <span class="number"><b>24.9</b></span>.
-          <br>— <span class="hl-text"><b>Избыточный вес:</b></span> ИМТ от <span class="number"><b>25</b></span> до <span class="number"><b>29.9</b></span>.
-          <br>— <span class="hl-text"><b>Ожирение:</b></span> ИМТ от <span class="number"><b>30</b></span> до <span class="number"><b>34.9</b></span>.
-          <br>— <span class="hl-text"><b>Сильное ожирение:</b></span> ИМТ от <span class="number"><b>35</b></span> до <span class="number"><b>39.9</b></span>.
-          <br>— <span class="hl-text"><b>Очень сильное ожирение:</b></span> ИМТ <span class="number"><b>40</b></span> и выше.
+          <br>— <span class="hl-text"><b>Недостаточный вес:</b></span> ИМТ менее <code><span class="number"><b>18.5</b></span></code>.
+          <br>— <span class="hl-text"><b>Нормальный вес:</b></span> ИМТ от <code><span class="number"><b>18.5</b></span></code> до <code><span class="number"><b>24.9</b></span></code>.
+          <br>— <span class="hl-text"><b>Избыточный вес:</b></span> ИМТ от <code><span class="number"><b>25</b></span></code> до <code><span class="number"><b>29.9</b></span></code>.
+          <br>— <span class="hl-text"><b>Ожирение:</b></span> ИМТ от <code><span class="number"><b>30</b></span></code> до <code><span class="number"><b>34.9</b></span></code>.
+          <br>— <span class="hl-text"><b>Сильное ожирение:</b></span> ИМТ от <code><span class="number"><b>35</b></span></code> до <code><span class="number"><b>39.9</b></span></code>.
+          <br>— <span class="hl-text"><b>Очень сильное ожирение:</b></span> ИМТ <code><span class="number"><b>40</b></span></code> и выше.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -329,7 +326,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 11.13</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает символ с консоли</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Клавиша отвечает за движение."</b></span>, если ввели символ <span class="string"><b>"W"</b></span>, <span class="string"><b>"A"</b></span>, <span class="string"><b>"S"</b></span> или <span class="string"><b>"D"</b></span>, и <span class="string"><b>"Другая команда."</b></span> в противном случае.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает символ с консоли</span> и <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Клавиша отвечает за движение."</b></span></code>, если ввели символ <code><span class="string"><b>"W"</b></span></code>, <code><span class="string"><b>"A"</b></span></code>, <code><span class="string"><b>"S"</b></span></code> или <code><span class="string"><b>"D"</b></span></code>, и <code><span class="string"><b>"Другая команда."</b></span></code> в противном случае.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите символ: <span class="input">W</span>
@@ -341,9 +338,9 @@
         <h2>Практическое Задание 11.14</h2>
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> началась акция для клиентов. Если клиент является участником программы лояльности, то ему выдаётся скидка на покупку.</p>
         <p>Скидка расчитывается следующим образом:
-          <br>— Стоимость корзины от <span class="number"><b>50</b></span> до <span class="number"><b>100</b></span> - скидка <span class="number"><b>5%</b></span>.
-          <br>— Стоимость корзины от <span class="number"><b>100</b></span> до <span class="number"><b>150</b></span> - скидка <span class="number"><b>10%</b></span>.
-          <br>— Стоимость корзины от <span class="number"><b>150</b></span> до <span class="number"><b>200</b></span> - скидка <span class="number"><b>15%</b></span>.
+          <br>— Стоимость корзины от <code><span class="number"><b>50</b></span></code> до <code><span class="number"><b>100</b></span></code> - скидка <code><span class="number"><b>5%</b></span></code>.
+          <br>— Стоимость корзины от <code><span class="number"><b>100</b></span></code> до <code><span class="number"><b>150</b></span></code> - скидка <code><span class="number"><b>10%</b></span></code>.
+          <br>— Стоимость корзины от <code><span class="number"><b>150</b></span></code> до <code><span class="number"><b>200</b></span></code> - скидка <code><span class="number"><b>15%</b></span></code>.
         </p>
 
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли стоимость корзины</span> и <span class="hl-text">ответ на вопрос</span> <span class="string"><b>"Клиент является участником программы лояльности?"</b></span>, затем <span class="hl-text">выводит в консоль итоговую сумму оплаты</span>.</p>
@@ -357,7 +354,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 11.15</h2>
-        <p>В офис <span class="hl-text">Teston Lebra</span> поставили необычную камеру <span class="number"><b>360</b></span> - она видит область только от <span class="number"><b>0</b></span> до <span class="number"><b>90</b></span>, от <span class="number"><b>135</b></span> до <span class="number"><b>180</b></span> и от <span class="number"><b>225</b></span> до <span class="number"><b>360</b></span> градусов. Напишите программу, которая <span class="hl-text">запрашивает с консоли угол в градусах</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"В области видимости."</b></span> или <span class="string"><b>"Вне области видимости."</b></span> в зависимости от угла.</p>
+        <p>В офис <span class="hl-text">Teston Lebra</span> поставили необычную камеру <code><span class="number"><b>360</b></span></code> - она видит область только от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>90</b></span></code>, от <code><span class="number"><b>135</b></span></code> до <code><span class="number"><b>180</b></span></code> и от <span class="number"><b>225</b></span></code> до <code><span class="number"><b>360</b></span></code> градусов. Напишите программу, которая <span class="hl-text">запрашивает с консоли угол в градусах</span> и <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"В области видимости."</b></span></code> или <code><span class="string"><b>"Вне области видимости."</b></span></code> в зависимости от угла.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите угол (в градусах): <span class="input">380</span>
@@ -369,12 +366,12 @@
         <h2>Практическое Задание 11.16</h2>
         <p><span class="hl-text">Teston Lebra</span> поручили написать прототип программы системы контроля доступа в научную лабораторию. Доступ в лабораторию разрешён только квалифицированным сотрудникам, имеющим специальное разрешение, и в определённые часы.</p>
         <p>Условия для доступа следующие:
-          <br>— Сотрудник должен <span class="hl-text">иметь специальное разрешение</span> или быть сотрудником с уровнем доступа <span class="hl-text">выше</span> <span class="number"><b>3</b></span>.
+          <br>— Сотрудник должен <span class="hl-text">иметь специальное разрешение</span> или быть сотрудником с уровнем доступа <span class="hl-text">выше</span> <code><span class="number"><b>3</b></span></code>.
           <br>— Доступ в лабораторию разрешён только с <span class="hl-text"><b>8:00</b></span> до <span class="hl-text"><b>18:00</b></span> для всех сотрудников, кроме тех, у кого <span class="hl-text">есть ночное разрешение</span>.
           <br>— Сотрудник <span class="hl-text">не должен находиться в списке тех, кому временно запрещён доступ</span>.
         </p>
 
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли разрешение</span>, <span class="hl-text">уровень доступа</span>, <span class="hl-text">текущее время</span>, <span class="hl-text">ночное разрешение</span> и <span class="hl-text">присутствие в списке запрета</span>, затем <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Доступ разрешён."</b></span> или <span class="string"><b>"Доступ запрещён."</b></span> в зависимости от условий.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли разрешение</span>, <span class="hl-text">уровень доступа</span>, <span class="hl-text">текущее время</span>, <span class="hl-text">ночное разрешение</span> и <span class="hl-text">присутствие в списке запрета</span>, затем <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Доступ разрешён."</b></span></code> или <code><span class="string"><b>"Доступ запрещён."</b></span></code> в зависимости от условий.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Сотрудник имеет специальное разрешение (Y/N): <span class="input">N</span>
