--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -191,7 +187,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 13.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, <span class="hl-text">выводит в консоль меню</span>, <span class="hl-text">запрашивает ввод выбора с консоли</span>, затем <span class="hl-text">выводит в консоль результат работы выбора</span>. Учтите, что пользователь в качестве выбора может вписать число не в диапазоне <span class="number"><b>1</b></span>-<span class="number"><b>3</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли два числа</span>, <span class="hl-text">выводит в консоль меню</span>, <span class="hl-text">запрашивает ввод выбора с консоли</span>, затем <span class="hl-text">выводит в консоль результат работы выбора</span>. Учтите, что пользователь в качестве выбора может вписать число не в диапазоне <code><span class="number"><b>1</b></span></code>-<code><span class="number"><b>3</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">10</span>
@@ -206,12 +202,12 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 13.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от <span class="number"><b>0</b></span> до <span class="number"><b>23</b></span> включительно</span> и <span class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь может вписать число не в диапазоне <span class="number"><b>0</b></span>-<span class="number"><b>23</b></span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>23</b></span></code> включительно</span> и <span class="hl-text">выводит в консоль время суток</span>. Учтите, что пользователь может вписать число не в диапазоне <code><span class="number"><b>0</b></span></code>-<code><span class="number"><b>23</b></span></code>.</p>
         <p>Время суток следующее:
-          <br>— <span class="hl-text"><b>Ночь:</b></span> от <span class="number"><b>0</b></span> до <span class="number"><b>6</b></span>.
-          <br>— <span class="hl-text"><b>Утро:</b></span> от <span class="number"><b>6</b></span> до <span class="number"><b>12</b></span>.
-          <br>— <span class="hl-text"><b>День:</b></span> от <span class="number"><b>12</b></span> до <span class="number"><b>18</b></span>.
-          <br>— <span class="hl-text"><b>Вечер:</b></span> от <span class="number"><b>18</b></span> до <span class="number"><b>24</b></span>.
+          <br>— <span class="hl-text"><b>Ночь:</b></span> от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>6</b></span></code>.
+          <br>— <span class="hl-text"><b>Утро:</b></span> от <code><span class="number"><b>6</b></span></code> до <code><span class="number"><b>12</b></span></code>.
+          <br>— <span class="hl-text"><b>День:</b></span> от <code><span class="number"><b>12</b></span></code> до <code><span class="number"><b>18</b></span></code>.
+          <br>— <span class="hl-text"><b>Вечер:</b></span> от <code><span class="number"><b>18</b></span></code> до <code><span class="number"><b>24</b></span></code>.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -224,9 +220,9 @@
         <h2>Практическое Задание 13.3</h2>
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> решили сделать акцию <span class="hl-text">"Накопи скидку"</span> для своих клиентов. Если клиент выполняет определённые условия, то он получает скидку.</p>
         <p>Условия следующие:
-          <br>— Если клиент закупался в магазине на протяжении <span class="number"><b>7</b></span> <span class="hl-text">дней подряд</span>, то получает скидку <span class="number"><b>2%</b></span>.
-          <br>— Если клиент закупался в магазине на протяжении <span class="number"><b>14</b></span> <span class="hl-text">дней подряд</span>, то получает скидку <span class="number"><b>3%</b></span>.
-          <br>— Если клиент закупался в магазине на протяжении <span class="number"><b>21</b></span> <span class="hl-text">день подряд</span>, то получает скидку <span class="number"><b>5%</b></span>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>7</b></span></code> <span class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>2%</b></span></code>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>3%</b></span></code>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span class="hl-text">день подряд</span>, то получает скидку <code><span class="number"><b>5%</b></span></code>.
           <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и больше</span>, то получает скидку <span class="number"><b>10%</b></span>.
           <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает скидку <span class="number"><b>5%</b></span>.
         </p>
@@ -287,9 +283,9 @@
         <h2>Практическое Задание 13.5</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли расстояние в километрах</span> и <span class="hl-text">выводит в консоль рекомендацию по перевозке</span>.</p>
         <p>Рекомендации следующие:
-          <br>— Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее <span class="number"><b>100</b></span> км.
-          <br>— Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от <span class="number"><b>100</b></span> км до <span class="number"><b>1000</b></span> км.
-          <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от <span class="number"><b>1000</b></span> и более км.
+          <br>— Рекомендуется доставка <span class="hl-text">автомобилем</span>, если расстояние менее <code><span class="number"><b>100</b></span></code> км.
+          <br>— Рекомендуется доставка <span class="hl-text">грузовым автомобилем</span>, если расстояние от <code><span class="number"><b>100</b></span></code> км до <code><span class="number"><b>1000</b></span></code> км.
+          <br>— Рекомендуется доставка <span class="hl-text">поездом или самолётом</span>, если расстояние от <code><span class="number"><b>1000</b></span></code> и более км.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -304,17 +300,17 @@
 
         <p>Градация оценки:
           <br>— <span class="hl-text"><b>Очень высокая:</b></span> все параметры в оптимальных границах.
-          <br>— <span class="hl-text"><b>Высокая:</b></span> <span class="number"><b>1</b></span> параметр вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Средняя:</b></span> <span class="number"><b>2</b></span> параметра вне оптимальных границ.
-          <br>— <span class="hl-text"><b>Низкая:</b></span> <span class="number"><b>3</b></span> параметра вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Высокая:</b></span> <code><span class="number"><b>1</b></span></code> параметр вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Средняя:</b></span> <code><span class="number"><b>2</b></span></code> параметра вне оптимальных границ.
+          <br>— <span class="hl-text"><b>Низкая:</b></span> <code><span class="number"><b>3</b></span></code> параметра вне оптимальных границ.
           <br>— <span class="hl-text"><b>Очень низкая:</b></span> все параметры вне оптимальных границ.
         </p>
 
         <p>Оптимальные границы:
-          <br>— <span class="hl-text"><b>Уровень освещённости:</b></span> <span class="number"><b>2000</b></span>-<span class="number"><b>10000 лк</b></span>.
-          <br>— <span class="hl-text"><b>Температура:</b></span> <span class="number"><b>15</b></span>-<span class="number"><b>28°C</b></span>.
-          <br>— <span class="hl-text"><b>Влажность воздуха:</b></span> <span class="number"><b>50</b></span>-<span class="number"><b>70%</b></span>.
-          <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span> <span class="number"><b>6</b></span>-<span class="number"><b>7 pH</b></span>.
+          <br>— <span class="hl-text"><b>Уровень освещённости:</b></span> <code><span class="number"><b>2000</b></span></code>-<code><span class="number"><b>10000 лк</b></span></code>.
+          <br>— <span class="hl-text"><b>Температура:</b></span> <code><span class="number"><b>15</b></span></code>-<code><span class="number"><b>28°C</b></span></code>.
+          <br>— <span class="hl-text"><b>Влажность воздуха:</b></span> <code><span class="number"><b>50</b></span></code>-<code><span class="number"><b>70%</b></span></code>.
+          <br>— <span class="hl-text"><b>Уровень кислотности почвы:</b></span> <code><span class="number"><b>6</b></span></code>-<code><span class="number"><b>7 pH</b></span></code>.
         </p>
         <h3>Консоль:</h3>
         <div class="console">
