--- a/Урок 15-20. Циклы/Python - PT15.html
+++ b/Урок 15-20. Циклы/Python - PT15.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -101,6 +97,7 @@
 
     code {
       font-family: "JetBrains mono", monospace;
+      color: #BCBEC4;
     }
 
     .string {
@@ -122,7 +119,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2>Практическое Задание 15.1</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль все чётные числа от <span class="number"><b>2</b></span> до введённого числа включительно</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли число</span> и <span class="hl-text">выводит в консоль все чётные числа от <code><span class="number"><b>2</b></span></code> до введённого числа включительно</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число: <span class="input">10</span>
@@ -137,7 +134,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 15.2</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>2</b></span> числа</span> и <span class="hl-text">выводит в консоль все чётные числа от первого введённого до второго введённого числа включительно в порядке возрастания</span>. Если первое число больше второго, то нужно поменять их местами.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>2</b></span></code> числа</span> и <span class="hl-text">выводит в консоль все чётные числа от первого введённого до второго введённого числа включительно в порядке возрастания</span>. Если первое число больше второго, то нужно поменять их местами.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите первое число: <span class="input">6</span>
@@ -193,7 +190,7 @@
         </p>
 
         <p>При выборе <span class="hl-text">пункта 1</span>, программа должна <span class="hl-text">запросить с консоли логин</span> и <span class="hl-text">пароль</span>. Затем <span class="hl-text">вернуться обратно в главное меню</span>.</p>
-        <p>При выборе <span class="hl-text">пункта 2</span>, программа должна <span class="hl-text">запросить с консоли логин</span> и <span class="hl-text">пароль</span>. Затем она <span class="hl-text">проверяет на правильность</span>. Если логин и пароль совпадают с теми, что были зарегистрированы, то программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Выполняется вход..."</b></span>. В противном случае программа <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Неверный логин или пароль."</b></span>.</p>
+        <p>При выборе <span class="hl-text">пункта 2</span>, программа должна <span class="hl-text">запросить с консоли логин</span> и <span class="hl-text">пароль</span>. Затем она <span class="hl-text">проверяет на правильность</span>. Если логин и пароль совпадают с теми, что были зарегистрированы, то программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Выполняется вход..."</b></span></code>. В противном случае программа <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>1. Зарегистрировать аккаунт
@@ -223,7 +220,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 15.6</h2>
-        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли числа до тех пор, пока не получит строку</span> <span class="string"><b>"END"</b></span> или <span class="hl-text">пустую строку</span>, а затем <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
+        <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли числа до тех пор, пока не получит строку</span> <code><span class="string"><b>"END"</b></span></code> или <span class="hl-text">пустую строку</span>, а затем <span class="hl-text">выводит в консоль сумму чисел</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите число (END - закончить ввод): <span class="input">5</span>
@@ -236,7 +233,7 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 15.7</h2>
-        <p>При оплате карточкой на сайтах обычно указывается <span class="number"><b>16</b></span>-значный номер карты. Напишите программу, которая <span class="hl-text">запрашивает с консоли <span class="number"><b>16</b></span>-значный номер карты</span> и <span class="hl-text">выводит в консоль</span> <span class="string"><b>"Номер карты корректный."</b></span>, если в номере <span class="number"><b>16</b></span> цифр, и <span class="string"><b>"Номер карты неверный. Вы ввели <span class="number">&ltчисло&gt</span> цифр."</b></span> в противном случае.</p>
+        <p>При оплате карточкой на сайтах обычно указывается <code><span class="number"><b>16</b></span></code>-значный номер карты. Напишите программу, которая <span class="hl-text">запрашивает с консоли <code><span class="number"><b>16</b></span></code>-значный номер карты</span> и <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Номер карты корректный."</b></span></code>, если в номере <code><span class="number"><b>16</b></span></code> цифр, и <code><span class="string"><b>"Номер карты неверный. Вы ввели <span class="number">&ltчисло&gt</span> цифр."</b></span></code> в противном случае.</p>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите номер карты: <span class="input">58695869586958690</span>
