--- a/Урок 21-27. Строки. Списки/Python - PT25.html
+++ b/Урок 21-27. Строки. Списки/Python - PT25.html
@@ -90,10 +90,6 @@
       padding: 20px 10px;
     }
 
-    .console code {
-      color: #BCBEC4;
-    }
-
     .console .input {
       color: #6AAB73;
       font-style: italic;
@@ -106,10 +102,12 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
   </style>
 </head>
