--- a/Урок 28-34. Функции. Модули/Python - PT30.html
+++ b/Урок 28-34. Функции. Модули/Python - PT30.html
@@ -77,22 +77,27 @@
 
     .string {
       color: #6AAB73;
+      font-family: "JetBrains mono", monospace;
     }
 
     .keyword {
       color: #CF8E6D;
+      font-family: "JetBrains mono", monospace;
     }
 
     .number {
       color: #2AACB8;
+      font-family: "JetBrains mono", monospace;
     }
 
     .function {
       color: #56A8F5;
+      font-family: "JetBrains mono", monospace;
     }
 
     .grey {
       color: #BCBEC4;
+      font-family: "JetBrains mono", monospace;
     }
   </style>
 </head>
